bug: fix-broken css and links on employer and employee login pages

--- a/public/styles/custom-css/employee-signUp-signIn.css
+++ b/public/styles/custom-css/employee-signUp-signIn.css
@@ -102,7 +102,7 @@ hr {
   text-decoration: none;
 }
 
-.social-signin{
+.social-sign-in{
   text-decoration: none !important;
 }
 
