--- a/public/styles/custom-css/employer-sign-in.css
+++ b/public/styles/custom-css/employer-sign-in.css
@@ -100,7 +100,7 @@ hr {
   text-decoration: none;
 }
 
-.social-signin{
+.social-sign-in{
   text-decoration: none !important;
 }
 
